@@ -257,6 +257,7 @@ version 0.5:
 - E-AC-3 support added to AC-3 decoder
 - Nellymoser ASAO encoder
 - ASS and SSA demuxer and muxer
+- IEC 61937 encapsulation for E-AC3, TrueHD, DTS-HD (for HDMI passthrough)
 - liba52 wrapper removed
 - SVQ3 watermark decoding support
 - Speex decoding via libspeex
